CMAKE_MINIMUM_REQUIRED(VERSION 3.4)

PROJECT(TywAnimation)
	
SET(HEADERS_MD5ANIM
	"MD5Anim/MD5Anim.h"
)
SOURCE_GROUP("MD5Anim\\Header Files" FILES ${HEADERS_MD5ANIM})


SET(SOURCES_MD5ANIM
	"MD5Anim/MD5Anim.cpp"
)
SOURCE_GROUP("MD5Anim\\Source Files" FILES ${SOURCES_MD5ANIM})


SET(HEADERS
	"AnimationMacro.h"
	"AnimationManager.h"
)
SOURCE_GROUP("Header Files" FILES ${HEADERS})


SET(SOURCES
	"AnimationManager.cpp"
)
SOURCE_GROUP("Source Files" FILES ${SOURCES})



ADD_LIBRARY(${PROJECT_NAME} SHARED
	${HEADERS_MD5ANIM}
	${SOURCES_MD5ANIM}
	${HEADERS}
	${SOURCES}
)

TARGET_LINK_LIBRARIES(${PROJECT_NAME} 
	debug 		"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Debug/TywLib_d.lib"
	optimized 	"${CMAKE_ARCHIVE_OUTPUT_DIRECTORY}/Release/TywLib.lib"
	)

TARGET_INCLUDE_DIRECTORIES(${PROJECT_NAME} PUBLIC
	${CMAKE_CURRENT_SOURCE_DIR}
	"${CMAKE_SOURCE_DIR}/EnginePch"
	"${CMAKE_CURRENT_SOURCE_DIR}/../"
 )
 
set_target_properties(${PROJECT_NAME} PROPERTIES 
	COTIRE_CXX_PREFIX_HEADER_INIT "${CMAKE_SOURCE_DIR}/EnginePch/stdafx.h"
	DEBUG_POSTFIX ${CMAKE_DEBUG_POSTFIX}
	)
cotire(${PROJECT_NAME})